[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Tracks/track1.png" type="Texture" id=1]
[ext_resource path="res://src/Gui/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Gui/TrackSelection.gd" type="Script" id=3]
[ext_resource path="res://src/Tracks/track2.png" type="Texture" id=4]

[node name="TrackSelection" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="track2" type="Sprite" parent="."]
position = Vector2( 547, 142 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="track1" type="Sprite" parent="."]
position = Vector2( 152, 142 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Track1Select" parent="." instance=ExtResource( 2 )]
margin_left = 27.0
margin_top = 253.059
margin_right = 277.0
margin_bottom = 302.06
text = "Select"

[node name="Track2Select" parent="." instance=ExtResource( 2 )]
margin_left = 426.0
margin_top = 254.059
margin_right = 676.0
margin_bottom = 303.06
text = "Select"

[connection signal="pressed" from="Track1Select" to="." method="_on_Track1Select_pressed"]
[connection signal="pressed" from="Track2Select" to="." method="_on_Track2Select_pressed"]
